--- a/public/afterlogin/form-add-san-pham.html
+++ b/public/afterlogin/form-add-san-pham.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="icon" href="../images/team.jpg">
+  <link rel="icon" href="../images/icon_web.png">
 
   <!-- Main CSS-->
   <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -27,7 +27,12 @@
   <script type="text/javascript" src="/ckeditor/ckeditor.js"></script>
 
   <script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
-  
+
+  <!-- Firebase -->
+
+
+  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-analytics.js"></script>
+
   <script>
 
     function readURL(input, thumbimage) {
@@ -169,23 +174,23 @@
     <ul class="app-menu">
       <li><a class="app-menu__item haha" href="#"><i class='app-menu__icon bx bx-cart-alt'></i>
           <span class="app-menu__label">POS Bán Hàng</span></a></li>
-      <li><a class="app-menu__item" href="../afterlogin/index.html"><i
-            class='app-menu__icon bx bx-tachometer'></i><span class="app-menu__label">Bảng điều khiển</span></a></li>
+      <li><a class="app-menu__item" href="../afterlogin/index.html"><i class='app-menu__icon bx bx-tachometer'></i><span
+            class="app-menu__label">Bảng điều khiển</span></a></li>
 
 
       <li><a class="app-menu__item active" href="../afterlogin/table-data-product.html"><i
             class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý sản phẩm</span></a>
-      </li> 
-
-       <li><a class="app-menu__item " class="app-menu__item" href="quan_ly_the_loai.html">
-        <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý thể loại</span></a>
       </li>
-      
+
+      <li><a class="app-menu__item " class="app-menu__item" href="quan_ly_the_loai.html">
+          <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý thể loại</span></a>
+      </li>
+
       <li><a class="app-menu__item" href="../afterlogin/table-data-oder.html"><i
             class='app-menu__icon bx bx-task'></i><span class="app-menu__label">Quản lý đơn hàng</span></a></li>
 
       </span></a></li>
-    
+
 
       <li><a class="app-menu__item" href="../afterlogin/quan-ly-bao-cao.html"><i
             class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Báo cáo doanh thu</span></a>
@@ -224,7 +229,7 @@
             <form class="row">
               <div class="form-group col-md-3">
                 <label class="control-label">Mã sản phẩm </label>
-                <input class="form-control" type="number" placeholder="">
+                <input disabled class="form-control" type="number" placeholder="">
               </div>
               <div class="form-group col-md-3">
                 <label class="control-label">Tên sản phẩm</label>
@@ -246,27 +251,19 @@
               </div>
               <div class="form-group col-md-3">
                 <label for="exampleSelect1" class="control-label">Danh mục</label>
-                <select class="form-control" id="exampleSelect1">
+                <select class="form-control theloaiSelect" id="exampleSelect1">
                   <option>-- Chọn danh mục --</option>
-                  <option>Bàn ăn</option>
-                  <option>Bàn thông minh</option>
-                  <option>Tủ</option>
-                  <option>Ghế gỗ</option>
-                  <option>Ghế sắt</option>
-                  <option>Giường người lớn</option>
-                  <option>Giường trẻ em</option>
-                  <option>Bàn trang điểm</option>
-                  <option>Giá đỡ</option>
+
                 </select>
               </div>
               <div class="form-group col-md-3 ">
                 <label for="exampleSelect1" class="control-label">Nhà cung cấp</label>
-                <select class="form-control" id="exampleSelect1">
+                <select class="form-control" id="exampleSelect1" disabled>
                   <option>-- Chọn nhà cung cấp --</option>
                   <option>Phong vũ</option>
                   <option>Thế giới di động</option>
                   <option>FPT</option>
-                  <option>Võ Trường</option>
+
                 </select>
               </div>
               <div class="form-group col-md-3">
@@ -274,8 +271,14 @@
                 <input class="form-control" type="text">
               </div>
               <div class="form-group col-md-3">
-                <label class="control-label">Giá vốn</label>
-                <input class="form-control" type="text">
+                <label class="control-label">Màu sắc</label>
+                <div class="form-control">
+                  <input class="input-color" type="color">
+                  <input class="input-color" type="color">
+                  <input class="input-color" type="color">
+                  <input class="input-color" type="color">
+                </div>
+
               </div>
               <div class="form-group col-md-12">
                 <label class="control-label">Ảnh sản phẩm</label>
@@ -364,14 +367,14 @@ MODAL
               <label class="control-label">Danh mục sản phẩm hiện đang có</label>
               <ul style="padding-left: 20px;">
                 <li>Bàn ăn</li>
-              <li>Bàn thông minh</li>
-              <li>Tủ</li>
-              <li>Ghế gỗ</li>
-              <li>Ghế sắt</li>
-              <li>Giường người lớn</li>
-              <li>Giường trẻ em</li>
-              <li>Bàn trang điểm</li>
-              <li>Giá đỡ</li>
+                <li>Bàn thông minh</li>
+                <li>Tủ</li>
+                <li>Ghế gỗ</li>
+                <li>Ghế sắt</li>
+                <li>Giường người lớn</li>
+                <li>Giường trẻ em</li>
+                <li>Bàn trang điểm</li>
+                <li>Giá đỡ</li>
               </ul>
             </div>
           </div>
@@ -453,6 +456,26 @@ MODAL
       }
     });
 
+
+  </script>
+
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
+
+  <script src="js/firebase.js"></script>
+
+  <script>
+    var theloai = firestore.collection("category");
+    var selection = document.getElementsByClassName('theloaiSelect')[0];
+    theloai.get().then((snapshot) => {
+      snapshot.forEach(sel => {
+        console.log(sel.data());
+        var option = `<option value="${sel.data().namecategory}">${sel.data().namecategory}</option>`;
+
+        selection.innerHTML += option;
+      });
+    })
   </script>
 </body>
 
