--- a/public/afterlogin/table-data-oder.html
+++ b/public/afterlogin/table-data-oder.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="icon" href="../images/team.jpg">
+  <link rel="icon" href="../images/icon_web.png">
 
   <!-- Main CSS-->
   <link rel="stylesheet" type="text/css" href="../afterlogin/css/main.css">
