--- a/public/afterlogin/form-add-san-pham.html
+++ b/public/afterlogin/form-add-san-pham.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" type="text/css"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <script type="text/javascript" src="/ckeditor/ckeditor.js"></script>
+  <!-- <script type="text/javascript" src="/ckeditor/ckeditor.js"></script> -->
 
   <script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
 
@@ -283,7 +283,7 @@
               <div class="form-group col-md-12">
                 <label class="control-label">Ảnh sản phẩm</label>
                 <div id="myfileupload">
-                  <input type="file" id="uploadfile" name="ImageUpload" onchange="readURL(this);" />
+                  <input type="file" multiple id="uploadfile" name="ImageUpload" onchange="readURL(this);" />
                 </div>
                 <div id="thumbbox">
                   <img height="450" width="400" alt="Thumb image" id="thumbimage" style="display: none" />
@@ -298,13 +298,14 @@
               <div class="form-group col-md-12">
                 <label class="control-label">Mô tả sản phẩm</label>
                 <textarea class="form-control" name="mota" id="mota"></textarea>
-                <script>CKEDITOR.replace('mota');</script>
+                <!-- <script>CKEDITOR.replace('mota');</script> -->
               </div>
 
           </div>
           <button class="btn btn-save" type="button">Lưu lại</button>
           <a class="btn btn-cancel" href="table-data-product.html">Hủy bỏ</a>
         </div>
+        <button id="upload" onclick="upLoad()">Up load thử</button>
   </main>
 
 
@@ -440,7 +441,6 @@ MODAL
     const inpFile = document.getElementById("inpFile");
     const loadFile = document.getElementById("loadFile");
     const previewContainer = document.getElementById("imagePreview");
-    const previewContainer = document.getElementById("imagePreview");
     const previewImage = previewContainer.querySelector(".image-preview__image");
     const previewDefaultText = previewContainer.querySelector(".image-preview__default-text");
     inpFile.addEventListener("change", function () {
@@ -460,12 +460,34 @@ MODAL
   </script>
 
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-storage.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
 
-  <script src="js/firebase.js"></script>
 
-  <script>
+  <!-- <script src="js/firebase.js"></script> -->
+
+  <script >
+    // import firebase from "firebase/app";
+    // import "firebase/storage";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyBhECFBJadJ4yFQF4KxbVfA7a6mrWsM_jo",
+      authDomain: "appsale-ba3f9.firebaseapp.com",
+      databaseURL: "https://appsale-ba3f9-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "appsale-ba3f9",
+      storageBucket: "appsale-ba3f9.appspot.com",
+      messagingSenderId: "757083996678",
+      appId: "1:757083996678:web:258b05b355945f9d207987",
+      measurementId: "G-85H2Z7X2MT"
+    };
+
+    // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const firestore = firebase.firestore();
+    const storage = firebase.storage();
+
     var theloai = firestore.collection("category");
     var selection = document.getElementsByClassName('theloaiSelect')[0];
     theloai.get().then((snapshot) => {
@@ -476,6 +498,33 @@ MODAL
         selection.innerHTML += option;
       });
     })
+
+
+    function upLoad() {
+      
+      var storageRef = storage.ref();
+      var path = document.querySelector('#uploadfile').files[0];
+
+      console.log(path);
+
+      Date.now();
+      var unixtime = new Date().getTime();
+
+      const metadata = {
+        contentType: 'image/jpeg',
+
+      }
+
+      const task = storageRef.child(unixtime+"").put(path, metadata);
+
+      task
+      .then(snapshot => snapshot.ref.getDownloadURL())
+      .then(url => {
+        console.log(url);
+        alert('Upload Thành Công');
+      })
+
+    }
   </script>
 </body>
 
