--- a/public/afterlogin/form_add_category.html
+++ b/public/afterlogin/form_add_category.html
@@ -228,7 +228,7 @@
 
           </div>
           <button class="btn btn-save" type="button" onclick="addCategory()">Lưu lại</button>
-          <a class="btn btn-cancel" href="table-data-product.html">Hủy bỏ</a>
+          <a class="btn btn-cancel" href="quan_ly_the_loai.html">Hủy bỏ</a>
         </div>
   </main>
 
@@ -266,15 +266,7 @@ MODAL
             <div class="form-group col-md-12">
               <label class="control-label">Danh mục sản phẩm hiện đang có</label>
               <ul style="padding-left: 20px;">
-                <li>Bàn ăn</li>
-                <li>Bàn thông minh</li>
-                <li>Tủ</li>
-                <li>Ghế gỗ</li>
-                <li>Ghế sắt</li>
-                <li>Giường người lớn</li>
-                <li>Giường trẻ em</li>
-                <li>Bàn trang điểm</li>
-                <li>Giá đỡ</li>
+
               </ul>
             </div>
           </div>
@@ -294,40 +286,6 @@ MODAL
 
 
 
-
-  <!--
-  MODAL TÌNH TRẠNG
--->
-  <div class="modal fade" id="addtinhtrang" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-    data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-
-        <div class="modal-body">
-          <div class="row">
-            <div class="form-group  col-md-12">
-              <span class="thong-tin-thanh-toan">
-                <h5>Thêm mới tình trạng</h5>
-              </span>
-            </div>
-            <div class="form-group col-md-12">
-              <label class="control-label">Nhập tình trạng mới</label>
-              <input class="form-control" type="text" required>
-            </div>
-          </div>
-          <BR>
-          <button class="btn btn-save" type="button">Lưu lại</button>
-          <a class="btn btn-cancel" data-dismiss="modal" href="#">Hủy bỏ</a>
-          <BR>
-        </div>
-        <div class="modal-footer">
-        </div>
-      </div>
-    </div>
-  </div>
-  <!--
-MODAL
--->
 
 
 
@@ -379,14 +337,13 @@ MODAL
 
         })
         // alert("Thành công")
-        categoryname1 = '';
+        document.getElementById('categoryname').innerText = '';
 
       }
 
     }
 
-
-
+    
 
   </script>
 </body>
